# ScientificTangle

./: .env.example  .gitignore  AGENTS.md  ANTIGRAVITY.md  CLAUDE.md  Makefile  README.md  ZCODE.md  docker-compose.cloud.expose.yml  docker-compose.cloud.http.yml  docker-compose.cloud.https.yml  docker-compose.cloud.yml  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  ruff.toml
services/auth_audit/: Dockerfile  README.md  SERVICE_OVERVIEW.md  pyproject.toml
services/auth_audit/app/: main.py
services/auth_audit/app/api/: auth.py  cookies.py  errors.py  factory.py  health.py  users.py  web.py
services/auth_audit/app/core/: audit.py  config.py  dependencies.py
services/auth_audit/app/db/: database.py  models.py  repository.py  schemas.py  seed.py
services/auth_audit/app/service/: security.py  service.py
services/auth_audit/src/models/: __init__.py  audit.py  auth.py  base.py
services/auth_audit/storage/: env.py
services/auth_audit/storage/versions/: 0001_create_auth_tables.py  0002_add_identity_lifecycle.py
services/auth_audit/tests/: conftest.py  test_api.py  test_postgresql.py  test_security.py
services/auth_service/: Dockerfile  README.md  SERVICE_OVERVIEW.md  alembic.ini  pyproject.toml
services/auth_service/app/: audit.py  config.py  dependencies.py  models.py  repository.py  schemas.py  security.py  seed.py  service.py  web.py
services/auth_service/storage/: env.py
services/auth_service/storage/versions/: 0003_add_document_access_policy.py
services/auth_service/tests/: conftest.py  test_api.py  test_postgresql.py  test_security.py
services/gateway/: Dockerfile  pyproject.toml
services/gateway/app/: main.py
services/gateway/app/api/: admin.py  chat.py  dictionaries.py  documents.py  graph.py  health.py  interests.py  notifications.py  query.py  review.py
services/gateway/app/core/: config.py  dependencies.py
services/gateway/app/service/: __init__.py  analytics_service.py  chat_service.py  graph_service.py  notification_service.py  service.py
services/gateway/tests/: conftest.py  test_admin_openapi.py  test_admin_service.py  test_analytics_service.py  test_chat_api.py  test_chat_service.py  test_chat_service_live.py  test_chat_sessions_integration.py  test_documents.py  test_documents_api.py  test_documents_catalog.py  test_graph.py  test_health_smoke.py  test_notification_service.py  test_openapi.py  test_query.py  test_query_reliability.py  test_query_stream.py  test_rate_limit.py  test_review_api.py
services/model/: Dockerfile  pyproject.toml
services/model/app/: contracts.py  main.py  prompt_registry.py  schema_registry.py  services.py  yandex_client.py
services/model/app/api/: health.py  v1.py
services/model/app/core/: config.py
services/model/app/prompts/: answer_synthesis_v1.md  conflict_detection_v1.md  embeddings_v1.md  gap_suggestions_v1.md  jsonld_enrichment_v1.md  notification_matching_v1.md  query_ir_v1.md  rerank_v1.md  structured_extraction_v1.md  user_interests_v1.md
services/model/tests/: conftest.py  test_error_handlers.py  test_model_v1.py  test_yandex_live_smoke.py
services/notification/: Dockerfile  pyproject.toml
services/notification/app/: main.py
services/notification/app/api/: events.py  factory.py  health.py  interests.py  notifications.py
services/notification/app/core/: config.py  dependencies.py
services/notification/app/service/: delivery_handler.py  delivery_worker.py  matching_service.py  notification_service.py  (+1 more)
services/notification/tests/: conftest.py  test_api.py  test_delivery_handler.py  test_events.py  test_health.py  test_interests_api.py  test_internal_match.py  test_matching.py  test_notifications_api.py  test_openapi_smoke.py
shared/: pyproject.toml
shared/config/: settings.py
shared/contracts/: __init__.py  facts.py  models.py
shared/metrics/: __init__.py  setup.py
shared/security/: __init__.py  jwt.py
shared/tests/: test_contracts.py  test_fact_contracts.py  test_metrics.py  test_request_id.py  test_security.py  test_source_span.py  test_web.py
shared/utils/: __init__.py  request_id.py  source_span.py
shared/web/: __init__.py  auth.py  errors.py  rate_limit.py  request_id.py
(+708 files in other folders)
