[project]
name = "scientific-tangle-shared"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "fastapi>=0.115",
    "structlog>=24.0",
    "uvicorn>=0.32",
    "httpx>=0.27",
    "PyJWT[crypto]>=2.9",
    "prometheus-client>=0.21",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
