[project]
name = "scientific-tangle-auth-audit"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "structlog>=24.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
]

[tool.uv.sources]
scientific-tangle-shared = { path = "../../shared" }

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
