[project]
name = "scientific-tangle-gateway"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "structlog>=24.0",
    "pydantic-settings>=2.0",
    "httpx>=0.27",
    "python-multipart>=0.0.12",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.14",
    "scientific-tangle-shared",
]

[tool.uv.sources]
scientific-tangle-shared = { path = "../../shared" }

[tool.uv]
dev-dependencies = [
    "pytest>=8.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".", "../.."]

[tool.hatch.build.targets.wheel]
packages = ["app"]
